# pico-art-classifier

./: CMakeLists.txt  README.md  pico_ml.c
images/: CMakeLists.txt  images.c  images.h
